<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ForecastFragment"
    android:id="@+id/forecast_fragment"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#E6E6E6">

        <TextView
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:text="@string/Monday" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="171dp"
            android:layout_height="90dp"
            android:contentDescription="@string/Monday"
            android:src="@drawable/thermometer"
            tools:visibility="visible"></ImageView>
        <TextView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingTop="30dp"
            android:text="@string/Hot" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6">

        <TextView
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:text="@string/Tuesday" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="171dp"
            android:layout_height="90dp"
            android:contentDescription="@string/Tuesday"
            android:src="@drawable/snowflake"
            tools:visibility="visible"></ImageView>
        <TextView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingTop="30dp"
            android:text="@string/Cold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6">
        <TextView
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:text="@string/Wednesday" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="171dp"
            android:layout_height="90dp"
            android:contentDescription="@string/Wednesday"
            android:src="@drawable/raindrop"
            tools:visibility="visible"></ImageView>
        <TextView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingTop="30dp"
            android:text="@string/Rain" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6">

        <TextView
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:text="@string/Thursday" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="171dp"
            android:layout_height="90dp"

            android:contentDescription="@string/Thursday"
            android:src="@drawable/tornado"
            tools:visibility="visible"></ImageView>
        <TextView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingTop="30dp"
            android:text="@string/Windy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6">

        <TextView
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:text="@string/Friday" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="171dp"
            android:layout_height="90dp"
            android:contentDescription="@string/Friday"
            android:src="@drawable/sun"
            tools:visibility="visible"></ImageView>

        <TextView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:textAlignment="viewStart"
            android:paddingLeft="0dp"
            android:paddingTop="30dp"
            android:text="@string/Sun" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6">

        <TextView
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:text="@string/Saturday" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="171dp"
            android:layout_height="90dp"
            android:contentDescription="@string/Saturday"
            android:src="@drawable/storm"
            tools:visibility="visible"></ImageView>

        <TextView
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingTop="30dp"
            android:text="@string/Thunder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E6E6E6">

        <TextView
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:text="@string/SunDay" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="171dp"
            android:layout_height="90dp"
            android:contentDescription="@string/SunDay"
            android:src="@drawable/cloud"
            tools:visibility="visible"></ImageView>

        <TextView
            android:layout_width="113dp"
            android:textAlignment="viewStart"
            android:layout_height="match_parent"
            android:paddingLeft="0dp"
            android:paddingTop="30dp"
            android:text="@string/Cloud" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            ></ImageView>
    </LinearLayout>


</LinearLayout>